--- a/projects.json
+++ b/projects.json
@@ -1,9 +1,9 @@
 [
   {
     "title": "MVB",
-    "description": "Plugin MC",
+    "description": "Enhances your survival multiplayers experiences with only one plugin\n\nMVB aims to create a Vanilla+ experience with fully customisable features\nNo need to install a bunch of plugins that need 10 library eachs",
     "URL": "https://modrinth.com/plugin/make-vanilla-better",
-    "url_name": "Enhances your survival multiplayers experiences with only one plugin\n\nMVB aims to create a Vanilla+ experience with fully customisable features\nNo need to install a bunch of plugins that need 10 library eachs",
+    "url_name": "Modrinth",
     "picture": "https://cdn.modrinth.com/data/c1K8bjMl/213ba72b5c258e74c940301629d4f1838442d130.png"
   }
 ]
