--- a/projects.json
+++ b/projects.json
@@ -4,6 +4,6 @@
     "description": "Enhances your survival multiplayers experiences with only one plugin<br><br>MVB aims to create a Vanilla+ experience with fully customisable features<br>No need to install a bunch of plugins that need 10 library eachs",
     "URL": "https://modrinth.com/plugin/make-vanilla-better",
     "url_name": "Modrinth",
-    "picture": "/images/mvb.png"
+    "picture": "https://cdn.modrinth.com/data/c1K8bjMl/213ba72b5c258e74c940301629d4f1838442d130.png"
   }
 ]
