--- a/projects.json
+++ b/projects.json
@@ -12,5 +12,11 @@
     "URL": "https://github.com/MathiasDPX/Babarcode",
     "url_name": "GitHub Repository",
     "picture": "https://raw.githubusercontent.com/MathiasDPX/MathiasDPX/main/assets/babarcode.png"
-  }
+  },
+  {
+    "title": "Participation sur OpenMC",
+    "description": "OpenMC est un plugin Minecraft collaboratif disponible sur GitHub<br>J'y ai participé (et suis devenu collaborateur)<br><br>Jouable sur play.openmc.fr",
+    "URL": "https://github.com/Margouta/PluginOpenMC",
+    "url_name": "GitHub Repository",
+    "picture":"https://i.imgur.com/ec3BZ54.png"
 ]
