--- a/projects.json
+++ b/projects.json
@@ -14,10 +14,10 @@
     "picture": "https://raw.githubusercontent.com/MathiasDPX/MathiasDPX/main/assets/babarcode.png"
   },
   {
-    "title": "Participation sur OpenMC",
+    "title": "Developer on OpenMC",
     "description": "OpenMC is a collaborative Minecraft plugin available on GitHub<br>I participated in it (and became a collaborator)<br><br>Playable on play.openmc.fr",
-    "URL": "https://github.com/Margouta/PluginOpenMC",
-    "url_name": "GitHub Repository",
+    "URL": "https://openmc.fr/",
+    "url_name": "Website",
     "picture":"https://i.imgur.com/ec3BZ54.png"
   }
 ]
