--- a/projects.json
+++ b/projects.json
@@ -12,5 +12,12 @@
     "URL": "https://openmc.fr/",
     "url_name": "Website",
     "picture":"https://i.imgur.com/ec3BZ54.png"
+  },
+  {
+    "title": "LocaleAPI",
+    "description": "This is an API for localizing character strings in several languages, with the possibility for users to add their own languages.",
+    "URL": "https://github.com/MathiasDPX/LocaleAPI/",
+    "url_name": "Github Repository",
+    "picture": "https://raw.githubusercontent.com/MathiasDPX/MathiasDPX/main/assets/localeapi.png"
   }
 ]
