Update OpenMC logo

--- a/projects.json
+++ b/projects.json
@@ -18,7 +18,7 @@
     "description": "OpenMC is a collaborative Minecraft plugin available on GitHub<br>I participated in it (and became a maintainer)<br><br>Playable on play.openmc.fr",
     "URL": "https://openmc.fr/",
     "url_name": "Website",
-    "picture":"https://i.imgur.com/ec3BZ54.png"
+    "picture":"https://i.imgur.com/2OC2VRV.png"
   },
   {
     "title": "Babarcode",
