Update cinema url

--- a/projects.json
+++ b/projects.json
@@ -2,7 +2,7 @@
   {
     "title": "CinéBrest",
     "description": "An instance of <a href=\"https://www.grainparis.art/\">grainParis.art</a> that centralized theater showtimes from Brest to a one-page<br>Both available on GitHub (see website footer)",
-    "URL": "https://cinema.coolcraft.ovh/",
+    "URL": "https://cinema.mathiasd.fr/",
     "url_name": "Website",
     "picture": "https://raw.githubusercontent.com/MathiasDPX/MathiasDPX/main/assets/cinebrest.png"
   },
